adding images and files

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "date-and-time": "^3.6.0",
     "gsap": "^3.12.7",
     "lottie-react": "^2.4.1",
     "next": "15.2.1",
